Add collection and collections endpoints
